[package]
name = "typsy"
version = "0.1.0"
authors = ["RustyYato <krishna.sd.2012@gmail.com>"]
edition = "2018"
keywords = ["type", "list", "compile-time", "hlist"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
repository = "https://github.com/RustyYato/typsy"
description = "Heterogenous containers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ['macros', 'alloc']

bigger_tuples = []
extreme_tuples = ['bigger_tuples']
alloc = []
nightly = []

[dependencies]
macros = { path = 'typsy-macros', version = "0.1", package = 'typsy-macros', optional = true }